--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,11 @@
 [[constraint]]
   name = "github.com/lib/pq"
   version = "1.0.0"
+
+[[constraint]]
+  name = "gopkg.in/src-d/go-kallax.v1"
+  version = "1.3.5"
+
+[[constraint]]
+  name = "github.com/jackc/pgx"
+  version = "3.2.0"
